...
            android:text="All"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Artist"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabMaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Master"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Release"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Label"/>

    </android.support.design.widget.TabLayout>

    <bj.vinylbrowser.customviews.MyRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tabLayout"
        android:background="@color/light_gray"/>
</RelativeLayout>
