<resources>
    <string name="app_name">VinylBrowser</string>

    <string name="oauth_access_token">oauth_access_token</string>
    <string name="oauth_access_token_secret">oauth_access_token_secret</string>

    <string name="beta_login_screen">In this version, you must log in to or create a Discogs account to browse</string>

    <string name="action_settings">Settings</string>
    <string name="discogs_base">https://api.discogs.com</string>
    <string name="drawer_item_collection">Collection</string>
    <string name="drawer_item_wantlist">Wantlist</string>
    <string name="drawer_item_search">Search</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="orders">Orders</string>
    <string name="selling">Selling</string>

    <string name="consumer_key">YkTWFsitqurUQSvyQwaG</string>
    <string name="consumer_secret">PJHslKRSRmZURHXdPWBSKNZPbdsGpASW</string>

    <string name="username">username</string>
    <string name="avatar_url">avatar_url</string>
    <string name="no_12_for_sale">No 12\" for sale</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="add_to_wantlist">Add to Wantlist</string>
    <string name="fetch_next_collection">fetch_next_collection</string>
    <string name="fetch_next_wantlist">fetch_next_wantlist</string>
    <string name="fetch_next_user_details">fetch_next_user_details</string>
    <string name="wantlist_none">Nothing in your Wantlist yet</string>
    <string name="error_wantlist">Unable to load Wantlist</string>
    <string name="collection_none">Nothing in your Collection yet</string>
    <string name="error_collection">Unable to load Collection</string>
    <string name="orders_none">Not sold anything</string>
    <string name="error_orders">Unable to load orders</string>
    <string name="selling_none">Not selling anything</string>
    <string name="error_selling">Unable to load selling</string>
    <string name="privacy_policy">The only information I store is your username, Collection and Wantlist so I can buid a recommendation system for you. This is not shared with anyone.\n\nYou are logged in securely via OAuth.</string>
    <string name="name">name</string>
    <string name="num_collection">num_collection</string>
    <string name="num_wantlist">num_wantlist</string>
    <string name="no_order_messages">No order messages</string>
    <string name="verify_email">Please verify your email address to view your marketplace information</string>
    <string name="by_signing_in_you_agree_to_the_privacy_policy">By signing in you agree to the Privacy Policy</string>

    <string name="main_activity">MainActivity</string>
    <string name="artist_activity">ArtistActivity</string>
    <string name="artist_releases_activity">ArtistReleasesActivity</string>
    <string name="label_activity">LabelActivity</string>
    <string name="login_activity">LoginActivity</string>
    <string name="marketplace_activity">MarketplaceActivity</string>
    <string name="master_activity">MasterActivity</string>
    <string name="order_activity">OrderActivity</string>
    <string name="release_activity">ReleaseActivity</string>
    <string name="search_activity">SearchActivity</string>
    <string name="single_list_activity">SingleListActivity</string>

    <string name="recently_viewed_release">Recently Viewed Release</string>

    <string name="clicked">Clicked</string>
    <string name="loaded">Loaded</string>
    <string name="logged_in">logged_in</string>
    <string name="error">error</string>
    <string name="learn_more">Learn more</string>
    <string name="learn_more_content">Non-intelligent recommender system that suggests tracks in the same genre or label as releases you have looked at</string>
    <string name="onboarding_completed">onboarding_completed</string>
    <string name="view_releases">View releases</string>
    <string name="no_items">No items</string>
    <string name="remove_from_collection">Remove from Collection</string>
    <string name="remove_from_wantlist">Remove from Wantlist</string>
</resources>
